[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/TitleScreen/Start_Screen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MountainsofChristmas.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://2D_Art/Fire_Particles.png" type="Texture" id=3]
[ext_resource path="res://Scenes/TitleScreen/Controls_Screen.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0.921875, 1, 0.994507, 1, 0.172806, 0.35526, 0.589844, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 256

[sub_resource type="DynamicFont" id=3]

size = 102
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="CanvasItemMaterial" id=4]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 0.449704, 0.692308, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.539063, 0, 1, 1, 0.914063, 0, 0.784314, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]

flags = 4
gradient = SubResource( 5 )
width = 512

[sub_resource type="Curve" id=7]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.875976 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 512
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 32.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 60.0
flatness = 0.0
gravity = Vector3( 0, -120, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 8.0
damping_random = 1.0
angle = 0.0
angle_random = 0.0
scale = 0.8
scale_random = 1.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape" ]

[sub_resource type="DynamicFont" id=10]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=11]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=12]

size = 82
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Settings" ]

[node name="TitleScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 2 )
expand = true
stretch_mode = 0

[node name="Start_Screen" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
first_level = "res://Levels/Level_01.tscn"

[node name="TitleScreen_Label" type="RichTextLabel" parent="Start_Screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 50.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Dreams of[/color] [color=red]Fire[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Dreams of Fire"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts" ]

[node name="TitleScreen_Label2" type="Label" parent="Start_Screen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 179.0
margin_right = 910.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Version 0.2.0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Particles2D" type="Particles2D" parent="Start_Screen" index="2"]

modulate = Color( 0.15625, 0.15625, 0.15625, 1 )
self_modulate = Color( 1, 0.359863, 0.109375, 1 )
material = SubResource( 4 )
position = Vector2( 637.993, 700.475 )
emitting = true
amount = 64
lifetime = 2.4
one_shot = false
preprocess = 2.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 1
process_material = SubResource( 9 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Time", "Visibility" ]

[node name="Button_Start" type="Button" parent="Start_Screen" index="3"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -110.0
margin_right = 460.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start Game"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Button_Controls" type="Button" parent="Start_Screen" index="4"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 810.0
margin_top = -110.0
margin_right = 1030.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Controls"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Button_Quit" type="Button" parent="Start_Screen" index="5"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -110.0
margin_right = -20.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Controls_Screen" type="Control" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )

[node name="Options_Label_Main" type="RichTextLabel" parent="Controls_Screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 50.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Controls[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Controls"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts" ]

[node name="Options_Label_Sub" type="Label" parent="Controls_Screen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 179.0
margin_right = 910.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Config file is saved at user://"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Button_Back" type="Button" parent="Controls_Screen" index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = 530.0
margin_right = -20.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Button_Vsync" type="Button" parent="Controls_Screen" index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -990.0
margin_top = 530.0
margin_right = -770.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "VSync: ON"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Button_Reset" type="Button" parent="Controls_Screen" index="4"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -750.0
margin_top = 530.0
margin_right = -530.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Button_Fullscreen" type="Button" parent="Controls_Screen" index="5"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1230.0
margin_top = 530.0
margin_right = -1010.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fullscreen"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="HScrollBar_Shader_Blur" type="HScrollBar" parent="Controls_Screen" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 760.0
margin_top = 660.0
margin_right = 1010.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 0.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
custom_step = -1.0

[node name="Shader_Blur_Label" type="Label" parent="Controls_Screen" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 760.0
margin_top = 610.0
margin_right = 1010.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shader Blur"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_MoveUp_Label" type="Label" parent="Controls_Screen" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 230.0
margin_right = 270.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move Up"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_MoveDown_Label" type="Label" parent="Controls_Screen" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 350.0
margin_right = 270.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move Down"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_MoveLeft_Label" type="Label" parent="Controls_Screen" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 230.0
margin_right = 520.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move Left"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_MoveRight_Label" type="Label" parent="Controls_Screen" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 350.0
margin_right = 520.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move Right"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_Dash_Label" type="Label" parent="Controls_Screen" index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_top = 350.0
margin_right = 770.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dash"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_Jump_Label" type="Label" parent="Controls_Screen" index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_top = 230.0
margin_right = 770.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jump"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_Awake_Label" type="Label" parent="Controls_Screen" index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 800.0
margin_top = 230.0
margin_right = 1020.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Awake/Sleep"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Input_Restart_Label" type="Label" parent="Controls_Screen" index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 800.0
margin_top = 350.0
margin_right = 1020.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart Level"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_MoveUp" type="Button" parent="Controls_Screen" index="16"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1230.0
margin_top = 200.0
margin_right = -1010.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Up Arrow"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_MoveDown" type="Button" parent="Controls_Screen" index="17"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1230.0
margin_top = 320.0
margin_right = -1010.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Down Arrow"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_MoveLeft" type="Button" parent="Controls_Screen" index="18"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -980.0
margin_top = 200.0
margin_right = -760.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Left Arrow"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_MoveRight" type="Button" parent="Controls_Screen" index="19"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -980.0
margin_top = 320.0
margin_right = -760.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Right Arrow"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Dash" type="Button" parent="Controls_Screen" index="20"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -730.0
margin_top = 320.0
margin_right = -510.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Shift"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Jump" type="Button" parent="Controls_Screen" index="21"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -730.0
margin_top = 200.0
margin_right = -510.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Spacebar"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Awake" type="Button" parent="Controls_Screen" index="22"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = 200.0
margin_right = -260.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Control"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Restart" type="Button" parent="Controls_Screen" index="23"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = 320.0
margin_right = -260.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Backspace"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Rebind_Label" type="Label" parent="Controls_Screen" index="24"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press any key..."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Panel" type="Panel" parent="Controls_Screen/Rebind_Label" index="0"]

self_modulate = Color( 1, 1, 1, 0.629843 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]


